doku/tests/compiletest/doku_attribute/missing_example.stderr
error: Unexpected meta-item format `word`
 --> tests/compiletest/doku_attribute/missing_example.rs:5:12
  |
5 |     #[doku(example)]
  |            ^^^^^^^
