doku/tests/compiletest/doku_attribute/missing_example.rs
use doku::Document;

#[derive(Document)]
struct Person {
    #[doku(example)]
    name: String,
}

fn main() {
    println!("{}", doku::to_json::<Person>());
}